--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "fs": "0.0.1-security",
-    "mongodb": "^4.10.0"
+    "mongodb": "^4.10.0",
+    "path": "^0.12.7"
   }
 }
