[UPDATE] created image locally and passed the same in docker-compose. Works. Need to push image to ECR in the next step.

--- a/mongo.yaml
+++ b/mongo.yaml
@@ -20,4 +20,8 @@ services:
     depends_on:
       mongodb:
         condition: service_healthy
+  fun-with-docker:
+    image: [ENTER IMAGE ID HERE AFTER CREATING IMAGE LOCALLY]
+    ports:
+      - 3000:3000
     
